force-app/main/default/objects/TriggerSwitch__c/fields/ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPIName__c</fullName>
    <description>Object for which a specific switch is used for</description>
    <label>Object API Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>