force-app/main/default/objects/TriggerSwitch__c/fields/TriggerOff__c.field-meta.xml
<CustomField>
    <fullName>TriggerOff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default is unchecked as triggers are on by default.</description>
    <label>Trigger Off</label>
    <type>Checkbox</type>
</CustomField>