force-app/main/default/objects/TriggerSwitch__c/fields/TriggerOn__c.field-meta.xml
<CustomField>
    <fullName>TriggerOn__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Default is checked as we want triggers to be on by default.</description>
    <label>Trigger On</label>
    <type>Checkbox</type>
</CustomField>