force-app/main/default/objects/TriggerSwitch__c/listViews/StandardView.listView-meta.xml
<ListView>
    <fullName>StandardView</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>TriggerOff__c</columns>
    <columns>SETUP_TYPE</columns>
    <filterScope>Everything</filterScope>
    <label>Standard View</label>
</ListView>